fix: overflow hidden for range block to hide scrollbars

--- a/src/components/sorting/sort.css
+++ b/src/components/sorting/sort.css
@@ -114,6 +114,7 @@
   align-items: center;
   justify-content: flex-end;
   height: 110px;
+  overflow: hidden;
 }
 
 .price-range {
